<?xml version="1.0"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>com.attivio.platform.modules.spark</groupId>
    <artifactId>aie-module-spark</artifactId>
    <name>platform/modules/spark</name>
    <version>0.0.1-SNAPSHOT</version>
    <scm>
        <connection>scm:git:https://github.com/vngarla/aie-module-spark.git</connection>
        <developerConnection>scm:git:https://github.com/vngarla/aie-module-spark.git</developerConnection>
        <url>https://github.com/vngarla/aie-module-spark</url>
    </scm>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <aieVersion>4.2.0</aieVersion>
        <finalName>aie-module-spark</finalName>
        <scala.version>2.10.4</scala.version>
        <attivio.host>localhost</attivio.host>
        <attivio.baseport>16000</attivio.baseport>
        <attivio.environment>test</attivio.environment>
    </properties>
    <dependencies>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-compiler</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-library</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scalap</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala-reflect</artifactId>
            <version>${scala.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.10</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.10</artifactId>
            <version>1.1.1</version>
            <scope>provided</scope>
        </dependency>
        <!-- only the SDK is in the compile scope, all other AIE stuff is in test
            / provided scope -->
        <dependency>
            <groupId>com.attivio.platform.sdk</groupId>
            <artifactId>client</artifactId>
            <version>${aieVersion}</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>com.attivio.platform.sdk</groupId>
            <artifactId>model</artifactId>
            <version>${aieVersion}</version>
            <scope>compile</scope>
        </dependency>
        <!-- AIE Dependecies -->
        <dependency>
            <groupId>com.attivio.platform.core</groupId>
            <artifactId>kernel</artifactId>
            <version>${aieVersion}</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-log4j12</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jul-to-slf4j</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jcl-over-slf4j</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-api-1.6.1-aie</artifactId>
                    <groupId>com.attivio.3rdparty.partial</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.attivio.platform.core</groupId>
            <artifactId>api</artifactId>
            <version>${aieVersion}</version>
            <scope>compile</scope>
            <exclusions>
                <exclusion>
                    <artifactId>slf4j-log4j12</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jul-to-slf4j</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jcl-over-slf4j</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-api-1.6.1-aie</artifactId>
                    <groupId>com.attivio.3rdparty.partial</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>xml-apis</groupId>
            <artifactId>xml-apis</artifactId>
            <version>1.4.01</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.attivio.platform</groupId>
            <artifactId>app</artifactId>
            <version>${aieVersion}</version>
            <scope>test</scope>
            <exclusions>
                <exclusion>
                    <artifactId>xml-apis</artifactId>
                    <groupId>xml-apis</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>xerces</artifactId>
                    <groupId>xerces</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>servlet-api</artifactId>
                    <groupId>javax.servlet</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-api</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-log4j12</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>jul-to-slf4j</artifactId>
                    <groupId>org.slf4j</groupId>
                </exclusion>
                <exclusion>
                    <artifactId>slf4j-api-1.6.1-aie</artifactId>
                    <groupId>com.attivio.3rdparty.partial</groupId>
                </exclusion>
            </exclusions>
        </dependency>
        <dependency>
            <groupId>com.attivio.platform</groupId>
            <artifactId>app</artifactId>
            <classifier>tests</classifier>
            <version>${aieVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.attivio.platform.modules</groupId>
            <artifactId>dbconnector</artifactId>
            <version>${aieVersion}</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.mockito</groupId>
            <artifactId>mockito-all</artifactId>
            <scope>test</scope>
            <version>1.9.5</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.8.1</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
    <profiles>
        <profile>
            <id>default-profile</id>
            <dependencies>
                <dependency>
                    <groupId>com.attivio.platform.core</groupId>
                    <artifactId>kernel</artifactId>
                    <classifier>tests</classifier>
                    <scope>test</scope>
                    <version>${aieVersion}</version>
                </dependency>
            </dependencies>
        </profile>
    </profiles>
    <build>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>resources</directory>
            </resource>
        </resources>
        <testResources>
            <testResource>
                <directory>src/main/test</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
        </testResources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>1.7</source>
                    <target>1.7</target>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.codehaus.mojo</groupId>
                <artifactId>buildnumber-maven-plugin</artifactId>
                <version>1.3</version>
                <executions>
                    <execution>
                        <phase>validate</phase>
                        <goals>
                            <goal>create</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <doCheck>false</doCheck>
                    <doUpdate>false</doUpdate>
                    <revisionOnScmFailure>unknown</revisionOnScmFailure>
                    <timestampFormat>{0,date,yyyy-MM-dd'T'HH:mm:ssZ}</timestampFormat>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <configuration>
                    <archive>
                        <manifestEntries>
                            <SCM-Revision>${buildNumber}</SCM-Revision>
                            <Timestamp>${timestamp}</Timestamp>
                            <SCM-Branch>${scmBranch}</SCM-Branch>
                        </manifestEntries>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-XX:MaxPermSize=128m -Xms1024m -Xmx2048m</argLine>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <useSystemClassLoader>true</useSystemClassLoader>
                    <useManifestOnlyJar>false</useManifestOnlyJar>
                    <systemPropertyVariables>
                        <attivio.environment>${attivio.environment}</attivio.environment>
                        <attivio.host>${attivio.host}</attivio.host>
                        <attivio.baseport>${attivio.baseport}</attivio.baseport>
                    </systemPropertyVariables>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>2.3</version>
                <configuration>
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <finalName>aie-module-spark-all-${version}</finalName>
                </configuration>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>net.alchim31.maven</groupId>
                <artifactId>scala-maven-plugin</artifactId>
                <version>3.2.0</version>
                <executions>
                    <execution>
                        <id>scala-compile-first</id>
                        <phase>process-resources</phase>
                        <goals>
                            <goal>add-source</goal>
                            <goal>compile</goal>
                        </goals>
                    </execution>
                    <execution>
                        <id>scala-test-compile</id>
                        <phase>process-test-resources</phase>
                        <goals>
                            <goal>testCompile</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
